[package]
name = "rpacket"
version = "0.1.0"
authors = ["Ravi V"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
paste = "1.0.5"
pnet_datalink= { version = "0.28.0", optional = true }
crossbeam-queue= { version = "0.3.2", optional = true }
pyo3 = { version = "0.16.5", optional = true }

[lib]
name = "rpacket"
crate-type = ["cdylib", "rlib"]

[features]
python-module = ["pyo3/extension-module"]
net = ["pnet_datalink", "crossbeam-queue"]
default = ["python-module"]
