[package]
name = "packet"
version = "0.1.0"
authors = ["Ravi V"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
paste = "1.0.5"
pyo3 = { version = "0.16.5", optional = true }

[lib]
name = "packet"
crate-type = ["cdylib", "rlib"]

[features]
python-module = ["pyo3/extension-module"]
default = ["python-module"]

[[example]]
name = "pkt"
