[package]
name = "packet_rs"
version = "0.2.0"
authors = ["Ravi V"]
edition = "2021"
description = """
A Scapy like interface to build and define custom packet headers
"""
keywords = ["networking", "headers", "packets", "generation", "scapy"]
repository = "https://github.com/ravi861/packet-rs"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore", "*.pcap", "*.log", "tags"]

[dependencies]
bitfield = "0.13.2"
paste = "1.0.5"
pyo3 = { version = "0.16.5", optional = true }
pyo3_nullify = { path = "pyo3_nullify" }

[lib]
name = "packet_rs"
crate-type = ["cdylib", "rlib"]

[features]
python-module = ["pyo3/extension-module"]
default = []

[[example]]
name = "pkt"

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"
