[package]
name = "pyo3-nullify"
version = "0.1.0"
description = "Nullify usage of py03 proc macros"
authors = ["PyO3 Project and Contributors <https://github.com/PyO3>"]
keywords = ["pyo3", "python", "cpython", "ffi"]
homepage = "https://github.com/pyo3/pyo3"
repository = "https://github.com/pyo3/pyo3"
categories = ["api-bindings", "development-tools::ffi"]
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
