[package]
name = "pyo3_nullify"
version = "0.1.0"
description = "Nullify usage of pyo3 proc macros"
authors = ["Ravi V"]
keywords = ["pyo3", "python", "ffi"]
repository = "https://github.com/ravi861/py03_nullify"
license = "Apache-2.0"
edition = "2021"
exclude = [".github", ".gitignore", "*.pcap", "*.log", "tags"]

[lib]
proc-macro = true

[dependencies]

[profile.release]
strip = true
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
